Update SensorResource.java